# langchain-tutorials

./: .gitignore  01_langchian_intro.ipynb  01_langchian_models.ipynb  01_message_and_prompts.ipynb  02_modals.ipynb  03_modals_gemini.ipynb  04_modal_huggingface.ipynb  05_structured_output.ipynb  README.md  fighterObject.json  pyproject.toml
embeddings/: README.md
