[project]
name = "langchain-tutorials"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
]
