[project]
name = "langchain-tutorials"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "huggingface-hub>=1.20.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "transformers>=5.12.1",
]
